# sail

./: .gitlab-ci.yml  ARCHITECTURE.md  ARCHITECTURE_SIMPLIFICATION.md  CLEANUP_ANALYSIS.md  CORRECT_JDBC_ARCHITECTURE.md  Cargo.toml  DETAILED_TEST_ANALYSIS.md  FINAL_BRANCH_SUMMARY.md  IMPLEMENTATION_ISSUES.md  JDBC_IMPLEMENTATION_SUMMARY.md  JDBC_READER_DESIGN.md  LAKESAIL_JDBC_ARCHITECTURE.md  PYTHON_DATASOURCE_ARCHITECTURE.md  SPARK_CONNECT_COMPATIBILITY.md  TEST_RESULTS.md  pyproject.toml  test_jdbc_backends.py  test_jdbc_simple.py  test_jdbc_unit.py  test_postgresql_support.py
.github/workflows/: build.yml  hms-kerberos-tests.yml  jdbc-integration.yml  spark-tests.yml
crates/sail-catalog-hms/: Cargo.toml  README.md
crates/sail-catalog-hms/docker/: Dockerfile.pyspark-kerb  README-KERBEROS.md  README.md  docker-compose-kerberos.yml  docker-compose.yml  hive-site-kerberos.xml  kerberos-init.sh  krb5.conf
crates/sail-catalog-hms/docker/pyspark-tests/: conftest.py  run-all-tests.sh  test_basic_operations.py  test_partition_operations.py  test_schema_operations.py  test_write_operations.py
crates/sail-catalog-hms/docs/: kerberos-setup.md
crates/sail-catalog-hms/src/: config.rs  error.rs  lib.rs  provider.rs
crates/sail-catalog-hms/src/acid/: mod.rs
crates/sail-catalog-hms/src/auth/: kerberos.rs  mod.rs
crates/sail-catalog-hms/src/cache/: mod.rs
crates/sail-catalog-hms/src/client/: capabilities.rs  connection.rs  mod.rs  version.rs
crates/sail-catalog-hms/src/types/: mod.rs
crates/sail-data-source/: Cargo.toml
crates/sail-data-source/src/: registry.rs
crates/sail-jdbc/: Cargo.toml
crates/sail-jdbc/src/: error.rs  exec.rs  format.rs  lib.rs  options.rs  partition.rs  provider.rs  reader.rs
crates/sail-python/: Cargo.toml
crates/sail-python-datasource/: Cargo.toml
crates/sail-python-datasource/src/: error.rs  exec.rs  format.rs  provider.rs
docker/dev/: Dockerfile.withpython
docs/: KERBEROS_SUMMARY.md  hms-implementation-design.md  hms-implementation-summary.md  hms-kerberos-implementation.md  hms-libgssapi-implementation.md
docs/guide/integrations/: jdbc.md
python/: test_python_datasource.py
python/pysail/: __init__.py
python/pysail/db/: __init__.py  jdbc.py
python/pysail/jdbc/: README.md  __init__.py  datasource.py  exceptions.py  jdbc_url_parser.py  query_builder.py
python/pysail/read/: README.md  SPARK_API.md  __init__.py  _backends.py  _config.py  _plan.py  _utils.py  arrow_datasource.py  data_source.py  jdbc_options.py  jdbc_url_parser.py  metrics.py  partition_planner.py  spark_adapter.py  (+3 more)
(+28 files in other folders)
