[package]
name = "sail-jdbc"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
sail-common-datafusion = { path = "../sail-common-datafusion" }

# DataFusion dependencies
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-physical-expr = { workspace = true }

# Arrow dependencies
arrow = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }

# Essential utilities
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
url = { workspace = true }

# JDBC connectivity via Python bridge (for now)
# TODO: Replace with native Rust JDBC libraries when available
pyo3 = { workspace = true, features = ["auto-initialize"] }

[lints]
workspace = true
